# DeskFlow

./: .editorconfig  .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
csharp/: DeskFlow.sln
csharp/src/DesktopAgent/: DesktopAgent.csproj  Program.cs
csharp/tests/DesktopAgent.Tests/: DesktopAgent.Tests.csproj  UnitTest1.cs
docs/design/: architecture.md  playback-ai-recovery.md  recording-system.md  roadmap.md  target-apps.md  workflow-engine.md
docs/logs/: dev-log.md  progress.md  session-plan.md  test-log.md  troubleshooting-log.md
proto/: rpa_service.proto
python/: pyproject.toml
python/examples/: test_inspect.py
python/src/rpa/: __init__.py
python/src/rpa/desktop/: __init__.py
test/: README.md  test_python_csharp_communication.bat  test_python_csharp_communication.ps1
test/performance/: .gitignore  README.md
test/performance/csharp/MouseKeySimulator/: InputSimulator.cs  MouseKeySimulator.csproj  Program.cs
test/performance/python/: requirements.txt  test_playback_performance.py
